--- a/12Chapter/Starbuzz/app/src/main/res/layout/activity_top_level.xml
+++ b/12Chapter/Starbuzz/app/src/main/res/layout/activity_top_level.xml
@@ -18,4 +18,16 @@
         android:layout_height="wrap_content"
         android:entries="@array/options"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/favorites" />
+    <ListView
+        android:id="@+id/list_favorites"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+
 </LinearLayout>
